The process is really great and the potential as well

--- a/SyncfusionDocumentation-WASMVersion/_Imports.razor
+++ b/SyncfusionDocumentation-WASMVersion/_Imports.razor
@@ -8,3 +8,5 @@
 @using Microsoft.JSInterop
 @using SyncfusionDocumentation_WASMVersion
 @using SyncfusionDocumentation_WASMVersion.Shared
+@using Syncfusion.Blazor
+@using Syncfusion.Blazor.Calendars
