It's going well for me

--- a/SyncfusionDocumentation-WASMVersion/_Imports.razor
+++ b/SyncfusionDocumentation-WASMVersion/_Imports.razor
@@ -10,3 +10,6 @@
 @using SyncfusionDocumentation_WASMVersion.Shared
 @using Syncfusion.Blazor
 @using Syncfusion.Blazor.Calendars
+@using Syncfusion.Blazor.Buttons
+@using Syncfusion.Blazor.Popups
+
