--- a/SyncfusionDocumentation-WASMVersion/Pages/SizeMode.razor
+++ b/SyncfusionDocumentation-WASMVersion/Pages/SizeMode.razor
@@ -17,5 +17,6 @@
 
 
 @code {
-
+    private bool isChecked = true;
+    public DateTime? DateValue { get; set; } = new DateTime(DateTime.Now.Year, DateTime.Now.Month, 8);
 }
