--- a/SyncfusionDocumentation-WASMVersion/Shared/NavMenu.razor
+++ b/SyncfusionDocumentation-WASMVersion/Shared/NavMenu.razor
@@ -26,7 +26,12 @@
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="sizemode">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Size Mode
+                <span class="oi oi-list-rich" aria-hidden="true"></span> CS-Size Mode
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="jssizemode">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> JS-Size Mode
             </NavLink>
         </div>
     </nav>
