--- a/SyncfusionDocumentation-WASMVersion/Pages/ControlSize.razor
+++ b/SyncfusionDocumentation-WASMVersion/Pages/ControlSize.razor
@@ -1,5 +1,5 @@
-﻿@page "/sizemode"
-@inherits SizeModeBase
+﻿@page "/controlsizemode"
+@inherits ControlSizeBase
 
 <h3>Size Mode for a control</h3>
 <hr />
