--- a/SyncfusionDocumentation-WASMVersion/Shared/NavMenu.razor
+++ b/SyncfusionDocumentation-WASMVersion/Shared/NavMenu.razor
@@ -25,12 +25,12 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="sizemode">
+            <NavLink class="nav-link" href="controlsizemode">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> CS-Size Mode
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="jssizemode">
+            <NavLink class="nav-link" href="appsizemode">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> JS-Size Mode
             </NavLink>
         </div>
